[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for METIS"
license = "Apache-2.0"
name = "cmeel-metis"
requires-python = ">= 3.8"
version = "5.1.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-metis"
repository = "https://github.com/cmake-wheel/cmeel-metis.git"
upstream = "http://glaros.dtc.umn.edu/gkhome/metis/metis/overview"

[tool.cmeel]
build-number = 2
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
