[build-system]
build-backend = "cmeel"
requires = ["cmeel-gklib", "cmeel[build]"]

[project]
description = "cmeel distribution for METIS"
license = "Apache-2.0"
name = "cmeel-metis"
requires-python = ">= 3.8"
version = "5.2.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-metis"
repository = "https://github.com/cmake-wheel/cmeel-metis.git"
upstream = "https://github.com/KarypisLab/METIS"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
